--- a/khmoney/pom.xml
+++ b/khmoney/pom.xml
@@ -143,6 +143,14 @@
 		    <artifactId>jackson-mapper-lgpl</artifactId>
 		    <version>1.9.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>nz.net.ultraq.thymeleaf</groupId>
+		  <artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency> 
 	</dependencies>
 
 	<build>
